feature: Adding conctact section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Metrics from "../components/dashboard/Metrics";
 import Experience from "../components/dashboard/Experience";
 import Education from "../components/dashboard/Education";
 import Skills from "../components/dashboard/Skills";
+import Contact from "../components/dashboard/Contact";
 ---
 
 <Layout>
@@ -26,5 +27,9 @@ import Skills from "../components/dashboard/Skills";
 
   <section id="skills">
     <Skills client:visible />
+  </section>
+
+  <section id="contact">
+    <Contact client:visible />
   </section>
 </Layout>
