Fix: Limpiamos warnings

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,7 +63,7 @@ const navLinks = [
             >
           </div>
           <span class="font-mono text-sm font-medium text-slate-300 transition-colors group-hover:text-white">
-            jjimenez
+            Javier Jiménez Molina
           </span>
         </a>
 
